@@ -30,11 +30,20 @@
   <properties>
     <javac.target>17</javac.target>
     <redirectTestOutputToFile>true</redirectTestOutputToFile>
+    <!-- required for running tests on JDK11+ -->
+    <test.additional.args>
+      --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+      --add-opens java.base/java.lang=ALL-UNNAMED <!--Mockito-->
+      --add-opens java.base/java.io=ALL-UNNAMED <!--Bookkeeper NativeIO-->
+      --add-opens java.base/java.util=ALL-UNNAMED <!--System Lambda-->
+      --add-opens java.base/sun.net=ALL-UNNAMED <!--netty.DnsResolverUtil-->
+      --add-opens java.management/sun.management=ALL-UNNAMED <!--JvmDefaultGCMetricsLogger-->
+    </test.additional.args>
     <!-- dependencies -->
     <jackson.version>2.13.2</jackson.version>
     <jackson-databind.version>2.13.2.1</jackson-databind.version>
     <kafka.version>2.1.1</kafka.version>
-    <lombok.version>1.18.22</lombok.version>
+    <lombok.version>1.18.24</lombok.version>
     <mockito.version>2.22.0</mockito.version>
     <pulsar.group.id>io.streamnative</pulsar.group.id>
     <pulsar.version>2.11.0.0-rc3</pulsar.version>
@@ -45,7 +54,9 @@
     <awaitility.version>4.0.3</awaitility.version>
     <grpc.version>1.45.1</grpc.version>
     <junit.version>4.13.1</junit.version>
-    <fusionauth-jwt.version>5.2.0</fusionauth-jwt.version>
+    <fusionauth-jwt.version>5.2.1</fusionauth-jwt.version>
+    <snakeyaml.version>1.31</snakeyaml.version>
+
     <!-- plugin dependencies -->
     <license-maven-plugin.version>3.0.rc1</license-maven-plugin.version>
     <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
@@ -211,6 +222,12 @@
         <artifactId>test-listener</artifactId>
         <version>${project.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>${snakeyaml.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
@@ -291,6 +308,7 @@
             -Dpulsar.allocator.pooled=false
             -Dpulsar.allocator.leak_detection=Advanced
             -Dlog4j.configurationFile="log4j2.xml"
+            ${test.additional.args}
           </argLine>
           <reuseForks>false</reuseForks>
           <forkCount>1</forkCount>
